--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -173,20 +173,20 @@ p {
 
 /*======== BUTTONS ========*/
 .btn {
-  padding: 16px 36px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 1px;
-  transition: all 0.2s;
-  font-weight: 600;
+  padding: 16px 36px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  border-radius: 1px !important;
+  transition: all 0.2s !important;
+  font-weight: 600 !important;
   color: #fff;
 }
 
 .btn-primary {
-  background-color: #F07D2C;
-  color: #131313;
-  border: 1px solid #F07D2C;
+  background-color: #F07D2C !important;
+  color: #131313 !important;
+  border: 1px solid #F07D2C !important;
 }
 
 .btn-primary:hover {
